# gifsicle-bin

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h.cmake.in  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
src/gifsicle_bin/: __init__.py  __main__.py
tests/: test_gifsicle.py
wasm/: README.md  build.sh  entry.c  package.json  test_wasm.cjs  test_wasm.mjs
